--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "express": "^4.18.2",
+    "joi": "^17.10.2",
     "moment": "^2.29.4",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
