--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "joi": "^17.10.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.5.2",
     "morgan": "1.10.0",
     "uuid": "^9.0.1"
   },
